[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/background1.png" type="Texture" id=1]
[ext_resource path="res://prefabs/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/sun.png" type="Texture" id=3]
[ext_resource path="res://prefabs/qbit.tscn" type="PackedScene" id=4]
[ext_resource path="res://prefabs/cat.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/Stage2.gd" type="Script" id=6]
[ext_resource path="res://prefabs/death Platform.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/death Particles.tscn" type="PackedScene" id=8]
[ext_resource path="res://prefabs/flag.tscn" type="PackedScene" id=9]
[ext_resource path="res://prefabs/scene checker.tscn" type="PackedScene" id=10]

[sub_resource type="CubeMesh" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2525, 28.5 )

[sub_resource type="CubeMesh" id=4]

[sub_resource type="RectangleShape2D" id=3]

[node name="Stage2" type="Node2D"]
script = ExtResource( 6 )

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 2250, 0 )

[node name="Background1" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -2736, 308 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Background2" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2670, 306 )
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )

[node name="Background3" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( -2744, 2120 )
scale = Vector2( 2, -2 )
texture = ExtResource( 1 )

[node name="Background4" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2( 2662, 2118 )
scale = Vector2( 2, -2 )
texture = ExtResource( 1 )

[node name="Sun" type="Sprite" parent="ParallaxBackground"]
position = Vector2( 2314, -258 )
texture = ExtResource( 3 )

[node name="Ground" type="StaticBody2D" parent="."]
position = Vector2( -1475, 21 )

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground"]
position = Vector2( 1771.18, 577.461 )
rotation = 3.14159
scale = Vector2( 2524.57, -28.1826 )
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2( 1777, 579.5 )
shape = SubResource( 2 )

[node name="MeshInstance2D2" type="MeshInstance2D" parent="Ground"]
position = Vector2( 4582, 1205 )
scale = Vector2( 100, 100 )
mesh = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Ground"]
position = Vector2( 4582, 1205 )
scale = Vector2( 10, 10 )
shape = SubResource( 3 )

[node name="MeshInstance2D3" type="MeshInstance2D" parent="Ground"]
position = Vector2( 5187, 1457 )
scale = Vector2( 100, 100 )
mesh = SubResource( 4 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Ground"]
position = Vector2( 5187, 1457 )
scale = Vector2( 10, 10 )
shape = SubResource( 3 )

[node name="MeshInstance2D4" type="MeshInstance2D" parent="Ground"]
position = Vector2( 5807, 1703 )
scale = Vector2( 100, 100 )
mesh = SubResource( 4 )

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Ground"]
position = Vector2( 5807, 1703 )
scale = Vector2( 10, 10 )
shape = SubResource( 3 )

[node name="MeshInstance2D5" type="MeshInstance2D" parent="Ground"]
position = Vector2( 6235, 1508 )
scale = Vector2( 100, 100 )
mesh = SubResource( 4 )

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Ground"]
position = Vector2( 6235, 1508 )
scale = Vector2( 10, 10 )
shape = SubResource( 3 )

[node name="MeshInstance2D6" type="MeshInstance2D" parent="Ground"]
position = Vector2( 6817, 1508 )
scale = Vector2( 400, 100 )
mesh = SubResource( 4 )

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Ground"]
position = Vector2( 6817, 1508 )
scale = Vector2( 40, 10 )
shape = SubResource( 3 )

[node name="cat" parent="." instance=ExtResource( 5 )]
position = Vector2( -1475, 21 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( -1938, 261 )

[node name="qbit" parent="Player" instance=ExtResource( 4 )]
position = Vector2( -578, -329 )

[node name="death Platform" parent="." instance=ExtResource( 7 )]
position = Vector2( -226, 1001 )

[node name="death Particles" parent="." instance=ExtResource( 8 )]
position = Vector2( 665, 514 )

[node name="scene checker" parent="." instance=ExtResource( 10 )]

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -2195.0
margin_top = 48.0
margin_right = -1935.0
margin_bottom = 95.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0, 0.403922, 0.52549, 1 )
text = "Oh No He Poisoned Mr.Schrodinger! You Must Save Him Or  Nobody Will Understand Our  Theory!!"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
margin_left = 2585.0
margin_top = 28.0
margin_right = 2685.0
margin_bottom = 48.0
rect_scale = Vector2( 3, 3 )
custom_colors/default_color = Color( 0, 0.403922, 0.52549, 1 )
text = "Leap Of Faith??"

[node name="flag" parent="." instance=ExtResource( 9 )]
position = Vector2( 2560, 800 )

[connection signal="die_live" from="." to="Player" method="_on_Stage_2_die_live"]
[connection signal="invoke_die" from="." to="Player" method="_on_Stage_2_invoke_die"]
[connection signal="live" from="." to="Player" method="_on_Stage_2_live"]
[connection signal="live_die" from="." to="Player" method="_on_Stage_2_live_die"]
[connection signal="player_entered" from="cat" to="Player" method="_on_cat_player_entered"]
[connection signal="state_is_0" from="Player/qbit" to="." method="_on_qbit_state_is_0"]
[connection signal="state_is_1" from="Player/qbit" to="." method="_on_qbit_state_is_1"]
[connection signal="state_is_2" from="Player/qbit" to="." method="_on_qbit_state_is_2"]
[connection signal="state_is_3" from="Player/qbit" to="." method="_on_qbit_state_is_3"]
[connection signal="body_entered" from="death Platform" to="." method="_on_death_Platform_body_entered"]
